# mlops-image-captioning-ui

./: Dockerfile  app.py  docker-compose.yaml  pyproject.toml
.github/workflows/: build_and_deploy.yaml
