[tool.poetry]
name = "mlops-image-captioning-ui"
version = "0.1.0"
description = ""
authors = ["Blesswin Samuel <blesswinsamuel@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.10.0"
pandas = "^1.4.3"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
